- (FEAT) background APIs for all actions
- (FEAT) look at ksdevice when building buildiso CDs to add the proper network lines
- (FEAT) WIP:  replicate is now mtime aware
- (BUGF) don't use RPM to check os_version, so RPM won't be called in rpm %post
- (BUGF) deprecated omapi/omshell features for manage_isc now removed
- (FEAT) removed configuration files for binary paths, will look for in PATH

- - 1.6.9
- (FEAT/cobbler) cobbler can now pass the virtio26 os version to virtinst, so virtio drivers can be used for RHEL5
.3 for instance
- (BUGF/cobbler) The URL to the WebUI documentation in the manpage was corrected
- (BUGF/cobbler) add the --nameserver option for static interfaces when defined (snippet fix)

- 1.6.7
- (BUGF/koan) Workaround for a bug in ybin, use --verbose for happy return codes
- (BUGF/cobbler) patch to redhat_register for Satellite 

1.6.6 (for more accurate listing, see release16 branch)
- (BUGF) don't use -m option for drac unless power_id is set
- (BUGF) don't run createrepo on reposync'd repos, it is redundant
- (BUGF) fix error message when wrong virt ram value is applied
- (FEAT) koan now partially works in source code form on EL 2
- (FEAT) discover repomd filenames (for F11 and later)
- (BUGF) Satellite also has a python module named "server" so we have to remove ours for Python imports.  This code was not used anyway.
- (BUGF) fix typo in network config snippet

- ... - 1.6.5
- (BUGF) don't use json on python x<=2.3 since we know it's simplejson x<2.0, which has unicode issues
- (FEAT) support F-11 imports
- (BUGF) don't add koan virtual interfaces for vlan tagged interfaces
- (BUGF) pair PAE and non-PAE content in imports better 
- (BUGF) don't try to scp /etc/cobbler/*.ks on replicate, this is an old path
- (BUGF) set proper umask on .mtime files
- (BUGF) fix koan error with unspecified arch using --kexec
- (BUGF) don't use --onboot=on in network config for kickstart for RHEL 3.
- (FEAT) koan can be built on EL-2

- Fri May 8 2009 - 1.6.4