@@ -1,6 +1,7 @@
 - HIGH PRIORITY:
 - Test interfaces in CLI and webapp thoroughly
 - make authz_ownership work for all of the new commands (require admin group?)
+- verify duplicate hostname and ip code works
 
 - MODERATE PRIORITY:
 - Look over old webapp and ensure tooltips in new version are good enough or better
