@@ -325,14 +325,14 @@ class BootCheck:
        Check that configured tftpd boot directory matches with actual
        Check that tftpd is enabled to autostart
        """
-       if os.path.exists(self.settings.tftpd_conf):
+       if os.path.exists("/etc/xinet.d/tftp"):
           f = open(self.settings.tftpd_conf)
           re_disable = re.compile(r'disable.*=.*yes')
           for line in f.readlines():
              if re_disable.search(line) and not line.strip().startswith("#"):
                  status.append(_("change 'disable' to 'no' in %(file)s") % { "file" : self.settings.tftpd_conf })
        else:
-          status.append(_("file %(file)s does not exist") % { "file" : self.settings.tftpd_conf })
+          status.append(_("file %(file)s does not exist") % { "file" : "/etc/xinetd.d/tftp" })
        
        bootloc = utils.tftpboot_location()
        if not os.path.exists(bootloc):
