@@ -51,9 +51,6 @@ DEFAULTS = {
     "default_virt_file_size"      : "5",
     "default_virt_ram"            : "512",
     "default_ownership"           : [ "admin" ],
-    "dhcpd_conf"                  : "/etc/dhcpd.conf",
-    "dhcpd_init"                  : "dhcpd",
-    "dnsmasq_conf"                : "/etc/dnsmasq.conf",
     "enable_menu"                 : 1,
     "func_master"                 : "overlord.example.org",
     "func_auto_setup"             : 0,
@@ -80,7 +77,6 @@ DEFAULTS = {
     "manage_reverse_zones"        : [],
     "mgmt_classes"                : [],
     "mgmt_parameters"             : {},
-    "named_conf"                  : "/etc/named.conf",
     "next_server"                 : "127.0.0.1",
     "power_management_default_type" : "ipmitool",
     "power_template_dir"          : "/etc/cobbler/power",
@@ -104,7 +100,6 @@ DEFAULTS = {
     "scm_track_mode"              : "git",
     "server"                      : "127.0.0.1",
     "snippetsdir"                 : "/var/lib/cobbler/snippets",
-    "tftpd_conf"                  : "/etc/xinetd.d/tftp",
     "virt_auto_boot"              : 0,
     "webdir"                      : "/var/www/cobbler",
     "xmlrpc_port"                 : 25151,
